data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1897.wast
;; 8. **Mismatched Block Conclusion**:    - **Description**: Conditionally branch to an `if` block designed to produce `i32`, using a `br_if` that expects `f64`.    - **Constraint**: Validates that different control flow paths adhere to output type expectations.    - **Differential Behavior**: WASM fails due to type incompatibility, wizard_engine potentially creates invalid state references.

(assert_invalid 
  (module 
    (func $mismatched-block-conclusion 
      (block (result i32) 
        (i32.const 0) 
        (if (result i32) (then (f64.const 1.0) (br_if 0))) 
      ) 
    ) 
  ) 
  "type mismatch" 
)